--- a/css/main.css
+++ b/css/main.css
@@ -1520,7 +1520,7 @@ ul.social_icons li  a i{
 }
 
 .footer {
-  background: none repeat scroll 0 0 #2E2E2E;
+  background: none repeat scroll 0 0 #140706;
   border-top: 5px solid #FFA400;
   height: 84px;
   margin-top: 110px;
