--- a/css/main.css
+++ b/css/main.css
@@ -375,6 +375,7 @@ input.search-form:hover {
 
 #main-slider .carousel .carousel-content {
   margin-top: 150px;
+  margin-left: 50px;
 }
 
 #main-slider .carousel .slide-margin{
